--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <!-- Site Metas -->
-<title>Dominic - Responsive HTML5 OnePage Template</title>
+<title>avinash</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
 
 <!-- Site Icons -->
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="images/logo3.png" type="image/x-icon" />
 <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
 <!-- Bootstrap CSS -->
@@ -495,7 +495,7 @@
                 <div class="col-md-12">
                     <div class="contact_form">
                         <div id="message"></div>
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                        <form id="contactForm" method="post" action="https://script.google.com/macros/s/AKfycbxTDbpLHw7TJLrpt0YHtCvdKYOi7EyDcdoi5a5WbvfK4MCwSP_-fkgirSwhEct_UiM/exec"name="sentMessage" novalidate="novalidate">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
